rearrangement of templates.

--- a/templates/404.html
+++ b/templates/404.html
@@ -9,13 +9,8 @@
     </div>
 
     <div class="not-found">
-        <h1>
-            Uh oh,<br> something broke.
-        </h1>
-
-        <h3>
-            Error 404 - page not found.
-        </h3>
+        <h1>Uh oh,<br> something broke.</h1>
+        <h3>Error 404 - page not found.</h3>
 
         <!-- Link to Home Page -->
         <a href="{% url 'home' %}"><button>Return to Petstagram</button></a>
