--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <!-- Starts Head Section -->
 <head>
-    <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="stylesheet" href= {% static 'css/styles.css' %}>
     <link rel="icon" type="image/x-icon" href="{% static 'images/free-30-instagram-stories-icons23_122570.png' %}">
     <title>Petstagram</title>
 </head>
@@ -34,11 +34,11 @@
                     </li>
                     <li class="nav-item">
                         <!-- Link to Login Page -->
-                        <a href="{% url 'login' %}"><i>Login</i></a>
+                        <a href="{% url 'login-user' %}"><i>Login</i></a>
                     </li>
                     <li class="nav-item">
                         <!-- Link to Register Page -->
-                        <a href="{% url 'register' %}"><i>Register</i></a>
+                        <a href="{% url 'register-user' %}"><i>Register</i></a>
                     </li>
                     <li class="nav-item">
                         <!-- Link to Profile Page -->
