--- a/templates/common/home-page.html
+++ b/templates/common/home-page.html
@@ -11,7 +11,7 @@
             <form class="searchbar" method="post">
                 <input type="text" placeholder="Search by pet name...">
                 <button>
-                    <img src="/static/images/search.png" height="18" alt="img2">
+                    <img src="/images/search.png" height="18" alt="img2">
                 </button>
             </form>
             <!-- End Searchbar Form -->
