--- a/templates/common/pets-posts.html
+++ b/templates/common/pets-posts.html
@@ -10,7 +10,7 @@
                 <div class="profilepic">
                     <div class="profile_img">
                         <div class="image">
-                            <img src="/static/images/person.png" alt="img8">
+                            <img src="/images/person.png" alt="img8">
                         </div>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
 
     <!-- Start Pet Photo -->
     <div class="imgBx" id="place the id of the photo here">
-        <img src="/static/images/axolotl.jpeg" alt="post" class="cover">
+        <img src="/images/axolotl.jpeg" alt="post" class="cover">
     </div>
     <!-- End Pet Photo -->
 
