--- a/templates/pets/pet-add-page.html
+++ b/templates/pets/pet-add-page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base/base.html" %}
 
 {% block content %}
     <!-- Start Add Pet Section-->
@@ -26,4 +26,5 @@
 
     </div>
     <!-- End Add Pet Section -->
+
 {% endblock %}
