--- a/templates/photos/photo-edit-page.html
+++ b/templates/photos/photo-edit-page.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends "base/base.html" %}
 
 {% block content %}
     <!-- Starts Edit Photo Section -->
@@ -41,4 +41,5 @@
 
     </div>
     <!-- End Edit Photo Section -->
+
 {% endblock %}
