--- a/templates/accounts/profile-delete-page.html
+++ b/templates/accounts/profile-delete-page.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %}
-
+{% extends "base/base.html" %}
+{% load static %}
 {% block content %}
 
     <!-- Start Delete Profile Section -->
@@ -13,7 +13,7 @@
                 <!-- Go Back Button -->
                 <a class="edit-btn" href="javascript:history.back()">Go Back</a>
             </div>
-            <img src="/images/are_you_sure_cat.gif" alt="are you sure cat git">
+            <img src="{% static 'images/are_you_sure_cat.gif' %}" alt="are you sure cat git">
         </div>
     <!-- End Delete Profile Section -->
 
