--- a/templates/accounts/profile-edit-page.html
+++ b/templates/accounts/profile-edit-page.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
-
+{% extends "base/base.html" %}
 {% block content %}
+
     <!-- Start Edit Profile Section -->
     <div class="edit-delete">
         <h2>Edit Profile</h2>
