--- a/templates/pets/pet-delete-page.html
+++ b/templates/pets/pet-delete-page.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
-
+{% extends "base/base.html" %}
 {% block content %}
+
     <!-- Starts Delete Pet Section -->
     <div class="edit-delete edit-photo">
         <h2>Delete pet</h2>
