--- a/templates/pets/pet-edit-page.html
+++ b/templates/pets/pet-edit-page.html
@@ -1,7 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
 
 {% block content %}
-
     <!-- Start Edit Pet Section -->
     <div class="edit-delete edit-photo">
         <h2>Edit Pet</h2>
@@ -28,4 +27,5 @@
 
     </div>
     <!-- End Edit Pet Section -->
+
 {% endblock %}
