--- a/templates/photos/photo-details-page.html
+++ b/templates/photos/photo-details-page.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'base/base.html' %}
+{% load static %}
 
 {% block content %}
-
     <div class="container">
         <div class="col-9">
 
@@ -17,7 +17,7 @@
                             <div class="profilepic">
                                 <div class="profile_img">
                                     <div class="image">
-                                        <img src="/images/person.png" alt="img8">
+                                        <img src="{% static '/images/person.png' %}" alt="img8">
                                     </div>
                                 </div>
                             </div>
@@ -41,13 +41,13 @@
 
                                 <!-- Link to Edit Pet Photo Page -->
                                 <a href="#">
-                                    <img class="edit-img" src="/images/edit-pen-icon-6.jpg"
+                                    <img class="edit-img" src="{% static '/images/edit-pen-icon-6.jpg' %}"
                                          alt="edit button">
                                 </a>
 
                                 <!-- Link to Delete Pet Photo Page -->
                                 <a href="#">
-                                    <img class="bin-img" src="/images/icon-remove-22.jpg" alt="bin button">
+                                    <img class="bin-img" src="{% static '/images/icon-remove-22.jpg' %}" alt="bin button">
                                 </a>
                             </div>
                             <!-- End IF the viewer is the creator of the photo -->
@@ -61,7 +61,7 @@
                 <!-- Start Pet Photo -->
                 <div class="imgBx" id="place the id of the photo here">
                     <!-- Pet Photo -->
-                    <img src="/images/axolotl.jpeg" alt="post" class="cover">
+                    <img src="{% static '/images/axolotl.jpeg' %}" alt="post" class="cover">
                 </div>
                 <!-- End Pet Photo -->
 
@@ -169,7 +169,7 @@
                                         <div class="profile_img">
                                             <div class="image">
                                                 <!-- User Profile Image -->
-                                                <img src="/images/person.png" alt="img8">
+                                                <img src="{% static '/images/person.png'%}" alt="img8">
                                             </div>
                                         </div>
                                     </div>
@@ -214,4 +214,5 @@
 
         </div>
     </div>
-{%  endblock %}
+
+{% endblock %}
