--- a/templates/photos/photo-details-page.html
+++ b/templates/photos/photo-details-page.html
@@ -6,78 +6,77 @@
         <div class="col-9">
 
             <!-- Start Pet Photo Post Section -->
-            <div class="card">
-                <div class="top">
+            {% for photo in photos %}
+                <div class="card">
+                    <div class="top">
 
-                    <!-- Start User Details and Image Location Section -->
-                    <div class="userDetails">
+                        <!-- Start User Details and Image Location Section -->
+                        <div class="userDetails">
 
-                        <!-- Link to User Profile Details Page-->
-                        <a href="#">
-                            <div class="profilepic">
-                                <div class="profile_img">
-                                    <div class="image">
-                                        <img src="{% static '/images/person.png' %}" alt="img8">
+                            <!-- Link to User Profile Details Page-->
+                            <a href="{% url 'profile-details' pk=1 %}">
+                                <div class="profilepic">
+                                    <div class="profile_img">
+                                        <div class="image">
+                                            <img src="{% static '/images/person.png' %}" alt="img8">
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </a>
-                        <h3>
-
-                            <!-- Link to User Profile Details Page -->
-                            <a href="#">
-                                <!-- IF user has first name and last name -->
-                                Diyan Kalaydzhiev
-                                <!-- else -->
-                                <!-- show user username -->
                             </a>
-                            <br>
+                            <h3>
 
-                            <!-- IF the photo has location -->
-                            <span>Bansko, Bulgaria</span>
-
-                            <!-- IF the viewer is the creator of the photo -->
-                            <div class="edit-delete-btns">
-
-                                <!-- Link to Edit Pet Photo Page -->
-                                <a href="#">
-                                    <img class="edit-img" src="{% static '/images/edit-pen-icon-6.jpg' %}"
-                                         alt="edit button">
+                                <!-- Link to User Profile Details Page -->
+                                <a href="{% url 'profile-details' pk=1 %}">
+                                    <!-- IF user has first name and last name -->
+                                    Diyan Kalaydzhiev
+                                    <!-- else -->
+                                    <!-- show user username -->
                                 </a>
+                                <br>
 
-                                <!-- Link to Delete Pet Photo Page -->
-                                <a href="#">
-                                    <img class="bin-img" src="{% static '/images/icon-remove-22.jpg' %}" alt="bin button">
-                                </a>
-                            </div>
-                            <!-- End IF the viewer is the creator of the photo -->
+                                <!-- IF the photo has location -->
+                                {% if photo.location %}
+                                    <span>{{ photo.location }}</span>
+                                {% endif %}
 
-                        </h3>
+                                <!-- IF the viewer is the creator of the photo -->
+                                <div class="edit-delete-btns">
+
+                                    <!-- Link to Edit Pet Photo Page -->
+                                    <a href="{% url 'edit-pet' username='doncho' pet_slug=pet.slug %}">
+                                        <img class="edit-img" src="{% static '/images/edit-pen-icon-6.jpg' %}"
+                                             alt="edit button">
+                                    </a>
+
+                                    <!-- Link to Delete Pet Photo Page -->
+                                    <a href="{% url 'delete-pet' username='doncho' pet_slug=pet.slug %}">
+                                        <img class="bin-img" src="{% static '/images/icon-remove-22.jpg' %}" alt="bin button">
+                                    </a>
+                                </div>
+                                <!-- End IF the viewer is the creator of the photo -->
+
+                            </h3>
+                        </div>
+                        <!-- End User Details and Image Location Section -->
+
                     </div>
-                    <!-- End User Details and Image Location Section -->
 
-                </div>
-
-                <!-- Start Pet Photo -->
-                <div class="imgBx" id="place the id of the photo here">
-                    <!-- Pet Photo -->
-                    <img src="{% static '/images/axolotl.jpeg' %}" alt="post" class="cover">
-                </div>
-                <!-- End Pet Photo -->
-
-                <div class="bottom">
+                    <!-- Start Pet Photo -->
+                    <div class="imgBx" id="place the id of the photo here">
+                        <!-- Pet Photo -->
+                        <img src="{% static '/images/axolotl.jpeg' %}" alt="post" class="cover">
+                    </div>
+                    <!-- End Pet Photo -->
 
                     <!-- Start Like and Share Buttons Section -->
-                    <div class="actionBtns">
-                        <div class="left">
-
-                            <!-- Start Like Button -->
-                            <span class="heart">
-
-                                    <!-- Link to Like Path -->
-									<a href="#">
-
-										<!-- IF user has liked the photo -->
+                    <div class="bottom">
+                        <div class="actionBtns">
+                            <div class="left">
+                                <!-- Start Like Button -->
+                                <span class="heart">
+                                    <a href="{% url 'like-photo' photo_id=photo.pk %}">
+                                    <!-- if user has liked the photo -->
+                                    {% if photo.is_liked_by_user %}
                                         <svg style="color: red"
                                              xmlns="http://www.w3.org/2000/svg"
                                              width="24"
@@ -92,8 +91,8 @@
                                                   fill="red">
                                             </path>
                                         </svg>
-
-                                        <!-- IF NOT user has liked the photo -->
+                                        <!-- else -->
+                                    {% else %}
                                         <svg aria-label="Like"
                                              color="#262626"
                                              fill="#262626"
@@ -116,100 +115,97 @@
                                                     48 25 48 17.6c0-8-6-14.5-13.4-14.5z">
                                         </path>
                                         </svg>
-								    </a>
-                            </span>
-                            <!-- End Like Button -->
+                                    {% endif %}
+                                    </a>
+                                </span>
+                                <!-- End Like Button -->
 
-                            <!-- Start Share  Button -->
-
-                            <!-- Link to Share Path -->
-                            <a href="#">
-                                <svg aria-label="Share Post" class="_8-yf5 " color="#262626" fill="#262626"
-                                     height="24" role="img" viewBox="0 0 48 48" width="24">
-                                    <path d="M47.8 3.8c-.3-.5-.8-.8-1.3-.8h-45C.9 3.1.3
-										3.5.1 4S0 5.2.4 5.7l15.9 15.6 5.5 22.6c.1.6.6
-										1 1.2 1.1h.2c.5 0 1-.3
-										1.3-.7l23.2-39c.4-.4.4-1 .1-1.5zM5.2
-										6.1h35.5L18 18.7 5.2 6.1zm18.7
-										33.6l-4.4-18.4L42.4 8.6 23.9 39.7z">
-                                    </path>
-                                </svg>
-                            </a>
-                        </div>
-                    </div>
-                    <!-- End Like and Share Buttons Section -->
-
-                    <!-- Number of Likes for the Photo -->
-                    <p class="likes">203 likes</p>
-
-                    <!-- Start Tagged Pets Section-->
-                    <!-- Link to First Tagged Pet Details Page -->
-                    <a href="#">
-                        <p class="message">
-                            <b>Sasho</b>
-                        </p>
-                    </a>
-                    <!-- Link to Second Tagged Pet Details Page -->
-                    <a href="#">
-                        <p class="message">
-                            <b>Some other fish</b>
-                        </p>
-                    </a>
-                    <!-- End Tagged Pets Section-->
-
-                    <!-- Date of Publication or edit of the Photo -->
-                    <h5 class="postTime">19/09/2022</h5>
-
-                    <!-- Start Comments Section -->
-                    <div class="comments">
-                        <div class="top">
-                            <div class="userDetails">
-                                <div class="comment-data">
-                                    <div class="profilepic">
-                                        <div class="profile_img">
-                                            <div class="image">
-                                                <!-- User Profile Image -->
-                                                <img src="{% static '/images/person.png'%}" alt="img8">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <p>
-                                        <!-- Link to User Profile Details Page-->
-                                        <!-- User First and/or Last Name or username-->
-                                        <a href="">Steven Ivanov</a>
-                                        <!-- User Comment -->
-                                        - OMG where can i get one
-                                    </p>
-                                </div>
-                                <span>Sept. 20, 2022, 5:02 p.m.</span>
+                                <!-- Start Share Button -->
+                                <a href="{% url 'share-photo' photo_id=photo.pk %}">
+                                    <svg aria-label="Share Post" class="_8-yf5 " color="#262626" fill="#262626"
+                                         height="24" role="img" viewBox="0 0 48 48" width="24">
+                                        <path d="M47.8 3.8c-.3-.5-.8-.8-1.3-.8h-45C.9 3.1.3
+                                        3.5.1 4S0 5.2.4 5.7l15.9 15.6 5.5 22.6c.1.6.6
+                                        1 1.2 1.1h.2c.5 0 1-.3
+                                        1.3-.7l23.2-39c.4-.4.4-1 .1-1.5zM5.2
+                                        6.1h35.5L18 18.7 5.2 6.1zm18.7
+                                        33.6l-4.4-18.4L42.4 8.6 23.9 39.7z">
+                                        </path>
+                                    </svg>
+                                </a>
+                                <!-- End Share Button -->
                             </div>
                         </div>
+                        <!-- End Like and Share Buttons Section -->
+
+                        <!-- Number of Likes per Photo -->
+                        <p class="likes">{{ photo.likes_count }} likes</p>
+
+                        <!-- Start Tagged Pets -->
+                        <!-- Link to Tagged Pet Details Page-->
+                        {% for pet in photo.tagged_pets.all %}
+                            {# TODO: change username to actual username when auth is available#}
+                            <a href="{% url 'details-pet' username='sashko' pet_slug=pet.slug %}">
+                                <p class="message">
+                                    <b>{{ pet.name }}</b>
+                                </p>
+                            </a>
+                        {% endfor %}
+                        <!-- End Tagged Pets -->
+
+                        <!-- Date of Publication or edit of the Photo -->
+                        <h5 class="postTime">{{ photo.publication_date }}</h5>
+                        {% for comment in photo.photocomment_set.all %}
+                            <!-- Start Comments Section -->
+                            <div class="comments">
+                            <div class="top">
+                                <div class="userDetails">
+                                    <div class="comment-data">
+                                        <div class="profilepic">
+                                            <div class="profile_img">
+                                                <div class="image">
+                                                    <!-- User Profile Image -->
+                                                    <img src="{% static '/images/person.png'%}" alt="img8">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <p>
+                                            <!-- Link to User Profile Details Page-->
+                                            <!-- User First and/or Last Name or username-->
+                                            <a href="#"></a>
+                                            <!-- User Comment -->
+                                            {{ comment.text }}
+                                        </p>
+                                    </div>
+                                    <span>{{ comment.date_time_of_publication }}</span>
+                                </div>
+                            </div>
+                        </div>
+                            <!-- End Comments Section -->
+                        {% endfor %}
                     </div>
-                    <!-- End Comments Section -->
-                </div>
 
-                <!-- Start Add Comments Section -->
-                <div class="addComments">
-                    <div class="reaction">
-                        <h3>
-                            <i class="far fa-smile"></i>
-                        </h3>
+                    <!-- Start Add Comments Section -->
+                    <div class="addComments">
+                        <div class="reaction">
+                            <h3>
+                                <i class="far fa-smile"></i>
+                            </h3>
+                        </div>
+                        <!-- Start Add Comments Form -->
+                        <form method="post" action="#">
+                            <label for="id_body">Body:</label>
+                            <textarea name="body" cols="40" rows="10" placeholder="Add comment..." maxlength="300"
+                                      required="" id="id_body"></textarea>
+                            <button type="submit">Post</button>
+                        </form>
+                        <!-- End Add Comments Form -->
+
                     </div>
-
-                    <!-- Start Add Comments Form -->
-                    <form method="post" action="#">
-                        <label for="id_body">Body:</label>
-                        <textarea name="body" cols="40" rows="10" placeholder="Add comment..." maxlength="300"
-                                  required="" id="id_body"></textarea>
-                        <!-- Post Comments Button -->
-                        <button type="submit">Post</button>
-                    </form>
-                    <!-- End Add Comments Form -->
+                    <!-- End Add Comments Section -->
 
                 </div>
-                <!-- End Add Comments Section -->
-
-            </div>
+            {% endfor %}
             <!-- End Pet Photo Post Section -->
 
         </div>
